...
      ) : null}

      <Button
        mode="outlined"
        onPress={handleSignOut}
        style={styles.button}
        testID="account-sign-out"
      >
        {strings.account.signOut}
      </Button>

      <Button
        mode="text"
...
